# dspC-

./: CMakeLists.txt
include/: AudioFile.h  distortion.h  fade.h  filter.h
src/: distortion.cpp  fade.cpp  filter.cpp  main.cpp
